tests/snapshots/run_wpt_conformance__coreml_gemm_two_float32_2D_tensors_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float32 2D tensors all options, coreml
 gemm :: gemm two float32 2D tensors all options: index 0: actual=607450.9 expected=612584.25 ulp=82134 tolerance=11
  inputs: inputA: [82.98884582519531, 18.9648494720459, 50.51683807373047, 90.51641082763672, 43.89479446411133, 40.45679473876953, 59.638519287109375, 98.89488220214844, 50.76741409301758, 36.271873474121094, 91.46013641357422, 9.336554527282717]; inputB: [25.14739227294922, 0.0037256532814353704, 75.74880981445313, 42.90679168701172, 66.6923828125, 16.4991455078125, 96.60688018798828, 34.08055114746094, 63.29909896850586, 3.036668062210083, 99.10041809082033, 87.37654876708984, 10.629964828491213, 93.14022064208984, 23.2437744140625, 92.34209442138672, 61.32737731933594, 70.08265686035156, 86.11856842041016, 60.32209014892578] (constant); inputC: [82.77201843261719, 91.3852081298828, 12.651897430419922, 20.12200355529785, 68.51224517822266, 35.202415466308594, 13.33466625213623, 50.78546905517578, 88.61195373535156, 30.577470779418945, 69.47061920166016, 7.166217803955078, 28.337108612060547, 90.69412231445313, 71.23025512695313] (constant)
  expected gemmOutput: [612584.25, 1049638.4, 1088050.8, 1046908.9, 1400378.1, 887367.06, 1091999, 1426718.1, 1124527.6, 1361999.1 ...] (len=15)
  actual gemmOutput: [607450.9, 1043970.75, 1087266.1, 1045661, 1396129.1, 885183.9, 1091171.9, 1423568.5, 1119032, 1360102.8 ...] (len=15)
  expected gemmOutput full nd:
[612584.25, 1049638.4, 1088050.8, 1046908.9, 1400378.1, 887367.06, 1091999, 1426718.1, 1124527.6, 1361999.1, ...] (len=15, shape=[3, 5])
  actual gemmOutput full nd:
[607450.9, 1043970.75, 1087266.1, 1045661, 1396129.1, 885183.9, 1091171.9, 1423568.5, 1119032, 1360102.8, ...] (len=15, shape=[3, 5])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[4, 3];
  }

  consts {
    operand_1: f32[5, 4] @bytes([220, 45, 201, 65, 23, 42, 116, 59, 100, 127, 151, 66, 142, 160, 43, 66, 128, 98, 133, 66, 64, 254, 131, 65, 185, 54, 193, 66, 124, 82, 8, 66, 71, 50, 125, 66, 197, 88, 66, 64, 106, 51, 198, 66, 203, 192, 174, 66, 86, 20, 42, 65, 203, 71, 186, 66, 64, 243, 185, 65, 39, 175, 184, 66, 60, 79, 117, 66, 82, 42, 140, 66, 181, 60, 172, 66, 210, 73, 113, 66]);
    operand_2: f32[3, 5] @bytes([70, 139, 165, 66, 58, 197, 182, 66, 44, 110, 74, 65, 221, 249, 160, 65, 69, 6, 137, 66, 70, 207, 12, 66, 203, 90, 85, 65, 82, 36, 75, 66, 82, 57, 177, 66, 169, 158, 244, 65, 245, 240, 138, 66, 168, 81, 229, 64, 102, 178, 226, 65, 100, 99, 181, 66, 228, 117, 142, 66]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=true, alpha=74.43204170482103, bTranspose=true, beta=62.01828598608989, c=2, label="");
  }

  outputs { gemmOutput; }
}
