tests/snapshots/run_wpt_conformance__coreml_gemm_two_float32_2D_tensors_options_bTranspose_being_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm two float32 2D tensors options.bTranspose being true",
    "coreml",
    "PASS",
)
