tests/snapshots/run_wpt_conformance__coreml_gemm_two_float32_2D_tensors_options_c_and_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float32 2D tensors options.c and options.beta, coreml
 gemm :: gemm two float32 2D tensors options.c and options.beta: index 0: actual=8161.1465 expected=13294.525 ulp=5288174 tolerance=10
  inputs: inputA: [82.98884582519531, 90.51641082763672, 59.638519287109375, 36.271873474121094, 18.9648494720459, 43.89479446411133, 98.89488220214844, 91.46013641357422, 50.51683807373047, 40.45679473876953, 50.76741409301758, 9.336554527282717]; inputB: [25.14739227294922, 66.6923828125, 63.29909896850586, 10.629964828491213, 61.32737731933594, 0.0037256532814353704, 16.4991455078125, 3.036668062210083, 93.14022064208984, 70.08265686035156, 75.74880981445313, 96.60688018798828, 99.10041809082033, 23.2437744140625, 86.11856842041016, 42.90679168701172, 34.08055114746094, 87.37654876708984, 92.34209442138672, 60.32209014892578] (constant); inputC: [82.77201843261719, 91.3852081298828, 12.651897430419922, 20.12200355529785, 68.51224517822266, 35.202415466308594, 13.33466625213623, 50.78546905517578, 88.61195373535156, 30.577470779418945, 69.47061920166016, 7.166217803955078, 28.337108612060547, 90.69412231445313, 71.23025512695313] (constant)
  expected gemmOutput: [13294.525, 19693.379, 15392.149, 15296.464, 23006.11, 14075.704, 15486.969, 22275.375, 20529.84, 20169.443 ...] (len=15)
  actual gemmOutput: [8161.1465, 14025.823, 14607.501, 14048.532, 18757.1, 11892.511, 14659.976, 19125.748, 15034.277, 18273.08 ...] (len=15)
  expected gemmOutput full nd:
[13294.525, 19693.379, 15392.149, 15296.464, 23006.11, 14075.704, 15486.969, 22275.375, 20529.84, 20169.443, ...] (len=15, shape=[3, 5])
  actual gemmOutput full nd:
[8161.1465, 14025.823, 14607.501, 14048.532, 18757.1, 11892.511, 14659.976, 19125.748, 15034.277, 18273.08, ...] (len=15, shape=[3, 5])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[3, 4];
  }

  consts {
    operand_1: f32[4, 5] @bytes([220, 45, 201, 65, 128, 98, 133, 66, 71, 50, 125, 66, 86, 20, 42, 65, 60, 79, 117, 66, 23, 42, 116, 59, 64, 254, 131, 65, 197, 88, 66, 64, 203, 71, 186, 66, 82, 42, 140, 66, 100, 127, 151, 66, 185, 54, 193, 66, 106, 51, 198, 66, 64, 243, 185, 65, 181, 60, 172, 66, 142, 160, 43, 66, 124, 82, 8, 66, 203, 192, 174, 66, 39, 175, 184, 66, 210, 73, 113, 66]);
    operand_2: f32[3, 5] @bytes([70, 139, 165, 66, 58, 197, 182, 66, 44, 110, 74, 65, 221, 249, 160, 65, 69, 6, 137, 66, 70, 207, 12, 66, 203, 90, 85, 65, 82, 36, 75, 66, 82, 57, 177, 66, 169, 158, 244, 65, 245, 240, 138, 66, 168, 81, 229, 64, 102, 178, 226, 65, 100, 99, 181, 66, 228, 117, 142, 66]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=62.01828598608989, c=2, label="");
  }

  outputs { gemmOutput; }
}
